travis to deploy SNAPSHOTS

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<description>Provides Dropwizard Metrics integration with Bootique</description>
 
 	<properties>
-		<bootique-version>0.11</bootique-version>
+		<bootique-version>0.12-SNAPSHOT</bootique-version>
 		<metrics-version>3.1.2</metrics-version>
 	</properties>
 
