--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.nhl.bootique.metrics</groupId>
 	<artifactId>bootique-metrics</artifactId>
-	<version>0.6-SNAPSHOT</version>
+	<version>0.6</version>
 	<packaging>jar</packaging>
 
 	<name>Metrics Integration Bundle for Bootique</name>
@@ -24,7 +24,7 @@
 	<scm>
 		<developerConnection>scm:git:ssh://git@github.com/nhl/bootique-metrics</developerConnection>
 		<url>https://github.com/nhl/bootique-metrics</url>
-		<tag>HEAD</tag>
+		<tag>bootique-metrics-0.6</tag>
 	</scm>
 
 	<dependencyManagement>
