--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <version>0.7-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Metrics Integration Bundle for Bootique</name>
+    <name>bootique-metrics: Dropwizard metrics integration module for Bootique</name>
     <description>Provides Dropwizard Metrics integration with Bootique</description>
 
     <properties>
