--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.nhl.bootique.parent</groupId>
+        <groupId>io.bootique.parent</groupId>
         <artifactId>bootique-parent</artifactId>
-        <version>0.10</version>
+        <version>0.12</version>
     </parent>
 
-    <groupId>com.nhl.bootique.metrics</groupId>
+    <groupId>io.bootique.metrics</groupId>
     <artifactId>bootique-metrics</artifactId>
     <version>0.7-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -23,15 +23,15 @@
     </properties>
 
     <scm>
-        <developerConnection>scm:git:ssh://git@github.com/nhl/bootique-metrics</developerConnection>
-        <url>https://github.com/nhl/bootique-metrics</url>
+        <developerConnection>scm:git:ssh://git@github.com/bootique/bootique-metrics</developerConnection>
+        <url>https://github.com/bootique/bootique-metrics</url>
         <tag>HEAD</tag>
     </scm>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.nhl.bootique</groupId>
+                <groupId>io.bootique</groupId>
                 <artifactId>bootique</artifactId>
                 <version>${bootique-version}</version>
             </dependency>
@@ -46,7 +46,7 @@
                 <version>${metrics-version}</version>
             </dependency>
             <dependency>
-                <groupId>com.nhl.bootique</groupId>
+                <groupId>io.bootique</groupId>
                 <artifactId>bootique-test</artifactId>
                 <version>${bootique-version}</version>
             </dependency>
@@ -62,7 +62,7 @@
 
         <!-- Compile dependencies -->
         <dependency>
-            <groupId>com.nhl.bootique</groupId>
+            <groupId>io.bootique</groupId>
             <artifactId>bootique</artifactId>
             <scope>compile</scope>
         </dependency>
@@ -89,7 +89,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.nhl.bootique</groupId>
+            <groupId>io.bootique</groupId>
             <artifactId>bootique-test</artifactId>
             <scope>test</scope>
         </dependency>
