--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <description>Provides Dropwizard Metrics integration with Bootique</description>
 
     <properties>
-        <bootique-version>0.19-SNAPSHOT</bootique-version>
+        <bootique-version>0.19</bootique-version>
         <metrics-version>3.1.2</metrics-version>
     </properties>
 
