--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>io.bootique.metrics</groupId>
     <artifactId>bootique-metrics</artifactId>
-    <version>0.7-SNAPSHOT</version>
+    <version>0.7</version>
     <packaging>jar</packaging>
 
     <name>bootique-metrics: Dropwizard metrics integration module for Bootique</name>
