--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
         <metrics-version>3.1.2</metrics-version>
     </properties>
 
+    <scm>
+        <developerConnection>scm:git:ssh://git@github.com/bootique/bootique-metrics</developerConnection>
+        <url>https://github.com/bootique/bootique-metrics</url>
+        <tag>HEAD</tag>
+    </scm>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
