[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>io.bootique.metrics</groupId>
     <artifactId>bootique-metrics</artifactId>
-    <version>0.7</version>
+    <version>0.8-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>bootique-metrics: Dropwizard metrics integration module for Bootique</name>
@@ -24,7 +24,7 @@
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/bootique/bootique-metrics</developerConnection>
         <url>https://github.com/bootique/bootique-metrics</url>
-        <tag>bootique-metrics-0.7</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencyManagement>
