--- a/bootique-metrics/pom.xml
+++ b/bootique-metrics/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.bootique.metrics</groupId>
         <artifactId>bootique-metrics-parent</artifactId>
-        <version>0.8</version>
+        <version>0.9-SNAPSHOT</version>
     </parent>
 
     <artifactId>bootique-metrics</artifactId>
