--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>io.bootique.metrics</groupId>
 	<artifactId>bootique-metrics-parent</artifactId>
-	<version>0.24-SNAPSHOT</version>
+	<version>0.24</version>
 	<packaging>pom</packaging>
 
 	<name>bootique-metrics-parent: Parent of metrics modules for Bootique</name>
@@ -29,7 +29,7 @@
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/bootique/bootique-metrics</developerConnection>
         <url>https://github.com/bootique/bootique-metrics</url>
-        <tag>HEAD</tag>
+        <tag>bootique-metrics-parent-0.24</tag>
     </scm>
 
     <distributionManagement>
