--- a/bootique-metrics/pom.xml
+++ b/bootique-metrics/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.bootique.metrics</groupId>
         <artifactId>bootique-metrics-parent</artifactId>
-        <version>0.25-SNAPSHOT</version>
+        <version>0.24-SNAPSHOT</version>
     </parent>
 
     <artifactId>bootique-metrics</artifactId>
@@ -19,7 +19,7 @@
             <dependency>
                 <groupId>io.bootique</groupId>
                 <artifactId>bootique</artifactId>
-                <version>0.24</version>
+                <version>${bootique-version}</version>
             </dependency>
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
@@ -29,7 +29,7 @@
             <dependency>
                 <groupId>io.bootique</groupId>
                 <artifactId>bootique-test</artifactId>
-                <version>0.24</version>
+                <version>${bootique-version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
