--- a/bootique-metrics/pom.xml
+++ b/bootique-metrics/pom.xml
@@ -17,9 +17,19 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>io.bootique</groupId>
+                <artifactId>bootique</artifactId>
+                <version>${bootique-version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-core</artifactId>
                 <version>${metrics-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.bootique</groupId>
+                <artifactId>bootique-test</artifactId>
+                <version>${bootique-version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -35,7 +45,6 @@
         <dependency>
             <groupId>io.bootique</groupId>
             <artifactId>bootique</artifactId>
-            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -58,7 +67,6 @@
         <dependency>
             <groupId>io.bootique</groupId>
             <artifactId>bootique-test</artifactId>
-            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
