--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 	</modules>
 
     <properties>
+        <bootique-version>${project.version}</bootique-version>
         <metrics-version>3.1.2</metrics-version>
     </properties>
 
