--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
     <modules>
         <module>bootique-metrics</module>
+        <module>bootique-metrics-healthchecks</module>
     </modules>
 
     <properties>
