--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.bootique.modules.parent</groupId>
@@ -10,7 +9,7 @@
 
 	<groupId>io.bootique.metrics</groupId>
 	<artifactId>bootique-metrics-parent</artifactId>
-	<version>0.25-SNAPSHOT</version>
+	<version>0.25</version>
 	<packaging>pom</packaging>
 
     <name>bootique-metrics-parent: Parent of metrics modules for Bootique</name>
@@ -31,7 +30,7 @@
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/bootique/bootique-metrics</developerConnection>
         <url>https://github.com/bootique/bootique-metrics</url>
-        <tag>HEAD</tag>
+        <tag>bootique-metrics-parent-0.25</tag>
     </scm>
 
     <distributionManagement>
