upgrading to bootique-modules-parent 0.10
* also unifying property names to use dots instead of slashes

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.bootique.modules.parent</groupId>
         <artifactId>bootique-modules-parent</artifactId>
-        <version>0.8</version>
+        <version>0.10</version>
     </parent>
 
 	<groupId>io.bootique.metrics</groupId>
@@ -23,8 +23,8 @@
     </modules>
 
     <properties>
-        <bootique-version>${project.version}</bootique-version>
-        <metrics-version>3.2.5</metrics-version>
+        <bootique.version>${project.version}</bootique.version>
+        <metrics.version>3.2.5</metrics.version>
     </properties>
 
     <scm>
@@ -46,12 +46,12 @@
             <dependency>
                 <groupId>io.bootique</groupId>
                 <artifactId>bootique</artifactId>
-                <version>${bootique-version}</version>
+                <version>${bootique.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-core</artifactId>
-                <version>${metrics-version}</version>
+                <version>${metrics.version}</version>
                 <exclusions>
                     <!-- Using BQ version of SLF -->
                     <exclusion>
@@ -63,17 +63,7 @@
             <dependency>
                 <groupId>io.bootique</groupId>
                 <artifactId>bootique-test</artifactId>
-                <version>${bootique-version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>${slf4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-simple</artifactId>
-                <version>${slf4j.version}</version>
+                <version>${bootique.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
