--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ script:
   - mvn clean verify
 
 jobs:
+  allow_failures:
+    - jdk: openjdk-ea
   include:
     - stage: deploy
       jdk: openjdk8
