--- a/bootique-metrics-healthchecks/pom.xml
+++ b/bootique-metrics-healthchecks/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.bootique.metrics</groupId>
         <artifactId>bootique-metrics-parent</artifactId>
-        <version>2.0.B1</version>
+        <version>2.0.B2-SNAPSHOT</version>
     </parent>
 
     <artifactId>bootique-metrics-healthchecks</artifactId>
