--- a/bootique-metrics-healthchecks/pom.xml
+++ b/bootique-metrics-healthchecks/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.bootique.metrics</groupId>
         <artifactId>bootique-metrics-parent</artifactId>
-        <version>1.3</version>
+        <version>1.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>bootique-metrics-healthchecks</artifactId>
