--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 
     <properties>
         <bootique.version>${project.version}</bootique.version>
-        <metrics.version>3.2.5</metrics.version>
+        <metrics.version>4.2.15</metrics.version>
     </properties>
 
     <scm>
@@ -64,10 +64,20 @@
                 <artifactId>metrics-core</artifactId>
                 <version>${metrics.version}</version>
                 <exclusions>
-                    <!-- Using BQ version of SLF -->
                     <exclusion>
                         <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-api</artifactId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>io.dropwizard.metrics</groupId>
+                <artifactId>metrics-jmx</artifactId>
+                <version>${metrics.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>*</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
