Heartbeat to support per-healthcheck delays #40

--- a/bootique-metrics-healthchecks/src/test/resources/io/bootique/metrics/health/heartbeat/HeartbeatLegacyIT.yml
+++ b/bootique-metrics-healthchecks/src/test/resources/io/bootique/metrics/health/heartbeat/HeartbeatLegacyIT.yml
@@ -18,6 +18,6 @@ heartbeat:
   fixedDelay: 100ms
   threadPoolSize: 2
   healthCheckTimeout: 2sec
-  checks:
-    hc1: {}
-    hc2: {}
+  healthChecks:
+     - "hc1"
+     - "hc2"
