--- a/bootique-metrics-healthchecks/src/test/resources/io/bootique/metrics/health/heartbeat/HeartbeatSkippedIT.yml
+++ b/bootique-metrics-healthchecks/src/test/resources/io/bootique/metrics/health/heartbeat/HeartbeatSkippedIT.yml
@@ -17,7 +17,8 @@ heartbeat:
   initialDelay: 3ms
   fixedDelay: 100ms
   threadPoolSize: 2
-  healthCheckTimeout: 2sec
   checks:
-    hc1: {}
-    hc2: {}
+    hc1:
+      skipHeartbeats: 1
+    hc2:
+      skipHeartbeats: 3
