API to wrap tasks in MDC-aware context #47

--- a/bootique-metrics/pom.xml
+++ b/bootique-metrics/pom.xml
@@ -33,6 +33,16 @@
     <name>bootique-metrics: Dropwizard metrics integration module for Bootique</name>
     <description>Provides Dropwizard Metrics integration with Bootique</description>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.bootique.logback</groupId>
+                <artifactId>bootique-logback</artifactId>
+                <version>${bootique.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
 
         <!-- Compile dependencies -->
@@ -64,9 +74,10 @@
             <artifactId>bootique-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Using logback instead of slf4j-simple to visually check MDC output -->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
+            <groupId>io.bootique.logback</groupId>
+            <artifactId>bootique-logback</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
