--- a/bootique-metrics-healthchecks/pom.xml
+++ b/bootique-metrics-healthchecks/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.bootique.metrics</groupId>
         <artifactId>bootique-metrics-parent</artifactId>
-        <version>3.0.M2</version>
+        <version>3.0.M3-SNAPSHOT</version>
     </parent>
 
     <artifactId>bootique-metrics-healthchecks</artifactId>
