--- a/bootique-metrics/pom.xml
+++ b/bootique-metrics/pom.xml
@@ -38,7 +38,7 @@
             <dependency>
                 <groupId>io.bootique.logback</groupId>
                 <artifactId>bootique-logback</artifactId>
-                <version>${bootique.version}</version>
+                <version>${project.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
