--- a/bootique-metrics/pom.xml
+++ b/bootique-metrics/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.bootique.metrics</groupId>
         <artifactId>bootique-metrics-parent</artifactId>
-        <version>3.0-RC1</version>
+        <version>3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>bootique-metrics</artifactId>
